:books: [main] ワードを追加

--- a/copyrights_dict.plist
+++ b/copyrights_dict.plist
@@ -4,9 +4,9 @@
   <array>
     <dict>
       <key>phrase</key>
-      <string>検証Word</string>
+      <string>支分権</string>
       <key>shortcut</key>
-      <string>けんしょうわーど</string>
+      <string>しぶんけん</string>
     </dict>
   </array>
 </plist>
