--- a/copyrights_dict.plist
+++ b/copyrights_dict.plist
@@ -8,5 +8,11 @@
       <key>shortcut</key>
       <string>しぶんけん</string>
     </dict>
+    <dict>
+      <key>phrase</key>
+      <string>柱書</string>
+      <key>shortcut</key>
+      <string>はしらがき</string>
+    </dict>
   </array>
 </plist>
