--- a/copyrights_dict.plist
+++ b/copyrights_dict.plist
@@ -14,5 +14,11 @@
       <key>shortcut</key>
       <string>はしらがき</string>
     </dict>
+    <dict>
+      <key>phrase</key>
+      <string>徴収率</string>
+      <key>shortcut</key>
+      <string>ちょうしゅうりつ</string>
+    </dict>
   </array>
 </plist>
